fixing gap issue on our socialButton component contact

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -20,11 +20,13 @@
   /* ⬡⬡⬡⬡⬡⬡⬡⬡⬡⬡⬡⬡≫ Colors ≪⬡⬡⬡⬡⬡⬡⬡⬡⬡⬡⬡⬡ */
   /* ▣▢▣▢▣▢▣▢▣▢▣▢▣▢▣▢▣▢▣▢▣▢▣▢▣▢▣▢▣▢ */
   --color-purple-primary: #231e39;
-  --color-yellow-primary: #ffdf00;
-  --color-blue-light: #a8c6de;
-  --color-blue-light-transparent: rgba(168, 198, 222, 0.2);
   --color-purple-secondary: #28223f;
   --color-purple-tertiary: #1f1a32;
+  --color-blue-light: #a8c6de;
+  --color-blue-light-transparent: rgba(168, 198, 222, 0.2);
+  --color-yellow-primary: #ffdf00;
+  --color-yellow-light: #ffe74d;
+  --color-yellow-tint: #fff4b3;
   --color-dark-primary: #333300;
   --gradient-yellow: linear-gradient(90deg, #ffde5d, #ffd633, #ffd11a);
 
